# ticketime

./: .gitattributes  .gitignore  CLAUDE.md  GEMINI.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
docs/: Ticketime_PRD.md  Ticketime_Planning_Document.md  Ticketime_Synchronization_Algorithm.md
docs/reference/: ticketime_algorithm.py
docs/ui-examples/application_settings/: code.html
docs/ui-examples/event_management_&_schedule/: code.html
docs/ui-examples/floating_time_overlay_&_tray/: code.html
docs/ui-examples/main_dashboard_overview/: code.html
docs/ui-examples/server_detail_&_analytics/: code.html
docs/ui-examples/synchronization_progress_panel/: code.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  models.rs  state.rs  sync_engine.rs  time_extractor.rs  timing.rs
src/components/dashboard/: ServerRow.tsx  ServerTable.tsx  StatsCards.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/server-detail/: Breadcrumb.tsx  DetailHeader.tsx  ExportButton.tsx  HealthGauge.tsx  HeroClock.tsx  MetadataCards.tsx  OffsetTrendChart.tsx  RttBoxPlot.tsx  SyncHealthPanel.tsx
src/components/settings/: SettingsField.tsx  SettingsSection.tsx
src/components/ui/: Card.tsx  (+8 more)
src/hooks/: useServerDetail.ts  useServerMetrics.ts
src/lib/: commands.ts  export.ts
src/pages/: DashboardPage.tsx  ServerDetailPage.tsx  SettingsPage.tsx
src/stores/: serverStore.ts  settingsStore.ts  syncStore.ts  themeStore.ts
src/types/: server.ts  settings.ts
(+15 files in other folders)
